# CoResearcher

./: .gitignore  README.md  pyproject.toml
backend/coresearcher/: __init__.py  __main__.py  config.py  evidence.py
backend/coresearcher.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
backend/coresearcher/artifacts/: __init__.py  generator.py
backend/coresearcher/context/: __init__.py  budgeting.py  builder.py  models.py  rendering.py
backend/coresearcher/domain/: __init__.py  commands.py  events.py  state.py
backend/coresearcher/gateway/: __init__.py  app.py  schemas.py
backend/coresearcher/graph/: __init__.py  director.py
backend/coresearcher/knowledge_base/: __init__.py  adapters.py
backend/coresearcher/memory/: __init__.py  config.py  extraction.py  markdown.py  models.py  retrieval.py  service.py  session.py
backend/coresearcher/models/: __init__.py  factory.py  openai_compatible.py  settings.py
backend/coresearcher/prompting/: __init__.py  policy.py
backend/coresearcher/security/: __init__.py  (+3 more)
configs/: coresearcher.example.yaml
docs/: backend-mvp.md  context-management.md  frontend-workbench.md  research-memory.md  tool-skill-runtime.md
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.test.tsx  App.tsx  index.css
memory/: session_memory.sqlite3
memory/global/: user_memory.md
tests/: conftest.py  test_context_management.py  test_memory_architecture.py  test_models.py  test_orchestration.py  test_service_api.py  test_state.py  test_tool_skill_runtime.py  test_tools_security_kb.py
(+79 files in other folders)
