[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coresearcher"
version = "0.1.0"
description = "Backend MVP for CoResearcher, a human-in-the-loop scientific deep research assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "langchain-core>=0.3",
  "langgraph>=0.2",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "uvicorn>=0.30",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
]
dev = [
  "ruff>=0.6",
]

[project.scripts]
coresearcher = "coresearcher.__main__:main"

[tool.setuptools.packages.find]
where = ["backend"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

